--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
     mavenCentral()
 }
 
+test {
+    maxHeapSize = "2g"
+}
+
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter"
     implementation "com.google.guava:guava:27.0-jre"
